<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Score Keeper Basketball</string>
    <string name="home">Home</string>
    <string name="visitor">Visitor</string>
    <string name="score">0</string>
    <string name="point3">+3 Points</string>
    <string name="point2">+2 Points</string>
    <string name="free">Free Throw</string>
    <string name="reset">Reset</string>
    <string name="image">Basketball at rest on a court</string>
</resources>
