<?xml version="1.0" encoding="utf-8"?>
<!--Basketball image borrowed from: Credit WWW.FRANCHISEOPPORTUNITIES.COM / flickr Creative Commons -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/basketball_2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="@dimen/none"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="@dimen/margin"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/home"
                android:textColor="@color/team"
                android:textSize="@dimen/team" />

            <TextView
                android:id="@+id/home_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/score"
                android:textColor="@color/score"
                android:textSize="@dimen/score" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_sides"
                android:layout_marginRight="@dimen/button_sides"
                android:onClick="threePointsHome"
                android:text="@string/point3" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_sides"
                android:layout_marginRight="@dimen/button_sides"
                android:layout_marginTop="@dimen/button_margin"
                android:onClick="twoPointsHome"
                android:text="@string/point2" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/button_margin"
                android:layout_marginLeft="@dimen/button_sides"
                android:layout_marginRight="@dimen/button_sides"
                android:layout_marginTop="@dimen/button_margin"
                android:onClick="onePointHome"
                android:text="@string/free" />


        </LinearLayout>

        <View
            android:layout_width="@dimen/bar"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="@dimen/none"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/visitor"
                android:textColor="@color/team"
                android:textSize="@dimen/team" />

            <TextView
                android:id="@+id/visitor_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/score"
                android:textColor="@color/score"
                android:textSize="@dimen/score" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_sides"
                android:layout_marginRight="@dimen/button_sides"
                android:onClick="threePointsVisitor"
                android:text="@string/point3" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_sides"
                android:layout_marginRight="@dimen/button_sides"
                android:layout_marginTop="@dimen/button_margin"
                android:onClick="twoPointsVisitor"
                android:text="@string/point2" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/button_margin"
                android:layout_marginLeft="@dimen/button_sides"
                android:layout_marginRight="@dimen/button_sides"
                android:layout_marginTop="@dimen/button_margin"
                android:onClick="onePointVisitor"
                android:text="@string/free" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/reset"
        android:onClick="resetAll"
        android:text="@string/reset" />


</RelativeLayout>
